@@ -1,0 +1,149 @@
+#
+# $Header$
+#
+
+
+package require tcltest 2.2
+namespace import -force ::tcltest::*
+
+eval ::tcltest::configure $argv
+
+
+
+test filter-1.1 {basic syntax} -body {
+    ns_register_filter
+} -returnCodes error -result {wrong # args: should be "ns_register_filter when method urlPattern script ?arg?"}
+
+test filter-1.2 {basic syntax} -body {
+    ns_register_filter when GET / aproc
+} -returnCodes error -result {bad flag "when": must be preauth, postauth, or trace}
+
+test filter-1.3 {basic syntax} -body {
+    ns_register_trace
+} -returnCodes error -result {wrong # args: should be "ns_register_trace method urlPattern script ?arg?"}
+
+
+
+test filter-2.1 {correct order} -setup {
+    ns_register_filter preauth  GET /filter-2.1 {
+        nsv_lappend . . preauth-2.1
+        return filter_ok
+        ;# }
+    ns_register_filter postauth GET /filter-2.1 {
+        nsv_lappend . . postauth-2.1
+        return filter_ok
+        ;# }
+    ns_register_filter trace GET /filter-2.1 {
+        nsv_lappend . . trace-2.1
+        return filter_ok
+        ;# }
+    ns_register_trace GET /filter-2.1 {
+        nsv_lappend . . voidtrace-2.1
+        return filter_ok
+        ;# }
+    ns_register_proc GET /filter-2.1 {ns_return 200 text/plain ok ;#}
+} -body {
+    set result [nstest_http -getbody 1 GET /filter-2.1]
+    after 2000
+    list $result [nsv_get . .]
+} -cleanup {
+    ns_unregister_proc GET /filter-2.1
+    nsv_unset -nocomplain . .
+} -result {{200 ok} {preauth-2.1 postauth-2.1 trace-2.1 voidtrace-2.1}}
+
+test filter-2.2 {stacked filters} -setup {
+    ns_register_filter preauth  GET /filter-2.2 {
+        nsv_lappend . . preauth-2.2-1
+        return filter_ok
+        ;# }
+    ns_register_filter preauth  GET /filter-2.2 {
+        nsv_lappend . . preauth-2.2-2
+        return filter_ok
+        ;# }
+    ns_register_proc GET /filter-2.2 {ns_return 200 text/plain ok ;#}
+} -body {
+    list [nstest_http -getbody 1 GET /filter-2.2] [nsv_get . .]
+} -cleanup {
+    nsv_unset -nocomplain . .
+} -result {{200 ok} {preauth-2.2-1 preauth-2.2-2}}
+
+test filter-2.3 {void trace always runs} -setup {
+    ns_register_filter preauth  GET /filter-2.3 {error filter-2.3 ;#}
+    ns_register_trace GET /filter-2.3 {
+        nsv_lappend . . voidtrace-2.3
+        return filter_ok
+        ;# }
+    ns_register_proc GET /filter-2.3 {error filter-2.3 ;# }
+} -body {
+    ns_logctl severity Error off
+    set result [nstest_http GET /filter-2.3]
+    ns_logctl severity Error on
+    after 2000 ;# wait for conn thread to run trace code
+    list $result [nsv_get . .]
+} -cleanup {
+    nsv_unset -nocomplain . .
+    ns_unregister_proc GET /filter-2.3
+} -result {500 voidtrace-2.3}
+
+
+
+test filter-3.1 {return filter_break} -setup {
+    ns_register_filter preauth GET /filter-3.1 {
+        nsv_lappend . . filter_break-3.1
+        return filter_break
+        ;# }
+    ns_register_filter preauth GET /filter-3.1 {
+        nsv_lappend . . filter_ok-3.1
+        return filter_ok
+        ;# }
+    ns_register_proc GET /filter-3.1 {
+        ns_return 200 text/plain ok
+        ;# }
+} -body {
+    list [nstest_http -getbody 1 GET /filter-3.1] [nsv_get . .]
+} -cleanup {
+    nsv_unset -nocomplain . .
+    ns_unregister_proc GET /filter-3.1
+} -result {{200 ok} filter_break-3.1}
+
+test filter-3.2 {return filter_return} -setup {
+    ns_register_filter preauth GET /filter-3.2 {
+        nsv_lappend . . filter_return-3.2
+        ns_return 200 text/plain filter_return
+        return filter_return
+        ;# }
+    ns_register_filter preauth GET /filter-3.2 {
+        nsv_lappend . . filter_ok-3.2
+        return filter_ok
+        ;# }
+    ns_register_proc GET /filter-3.2 {
+        nsv_lappend . . proc-3.2
+        ns_return 200 text/plain ok
+        ;# }
+} -body {
+    list [nstest_http -getbody 1 GET /filter-3.2] [nsv_get . .]
+} -cleanup {
+    nsv_unset -nocomplain . .
+    ns_unregister_proc GET /filter-3.2
+} -result {{200 filter_return} filter_return-3.2}
+
+
+
+test filter-4.1 {glob} -setup {
+    ns_register_filter preauth GET /filter-4.1/*/literal/* {
+        nsv_lappend . . filter-4.1
+        return filter_ok
+        ;# }
+    ns_register_proc GET /filter-4.1 {
+        ns_return 200 text/plain [nsv_get . .]
+        ;# }
+} -body {
+    nstest_http -getbody 1 GET /filter-4.1/X/literal/Y]
+} -cleanup {
+    nsv_unset -nocomplain . .
+    ns_unregister_proc GET /filter-4.1
+} -result {200 filter-4.1}
+
+
+
+cleanupTests
